--- a/SpringBoot-STS/SpringBootRestAPI/src/main/resources/application.properties
+++ b/SpringBoot-STS/SpringBootRestAPI/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+#Enabling Multipart (file uploads)
+
+spring.servlet.multipart.enabled=true
+
+#Max file size
+spring.servlet.multipart.max-file-size=5MB
+
+#Min filw size
+spring.servlet.multipart.file-size-threshold=1KB
+
+
 spring.datasource.name=SpringBoot-rest-api
 spring.datasource.url=jdbc:mysql://localhost:3306/rest_api
 spring.datasource.username=root
